--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Sidebar with personal info and skills -->
         <aside class="sidebar">
             <div class="profile-img">
-                <img src="assets/avatar.png" alt="Ảnh hồ sơ" />
+                <img src="assets/avatar.jpg" alt="Ảnh hồ sơ" />
             </div>
             <div class="contact-info">
                 <h2>Liên hệ</h2>
@@ -42,16 +42,7 @@
                 <ul>
                     <li>Tiếng Anh: Đọc hiểu văn bản</li>
                 </ul>
-            </div>
-            
-            <div class="interests">
-                <h2>Sở thích</h2>
-                <ul>
-                    <li><i class="fas fa-futbol"></i> Bóng đá</li>
-                    <li><i class="fas fa-book"></i> Đọc sách</li>
-                    <li><i class="fas fa-chess"></i> Cờ tướng</li>
-                </ul>
-            </div>
+            </div> 
         </aside>
         
         <!-- Main content -->
