feat: update job

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     <ul>
                         <li>Teamlead và training member mới</li>
                         <li>Phát triển các tính năng frontend sử dụng React, Vue và Angular</li>
+                        <li>NodeJS</li>
                         <li>Review code</li>
                     </ul>
                 </div>
