feat: update DB

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <h2>Kỹ năng kỹ thuật</h2>
                 <ul>
                     <li>Frontend: Angular 2+, Vue3, ReactJS</li>
-                    <li>Cơ sở dữ liệu: Xử lý cơ bản</li>
+                    <li>Cơ sở dữ liệu MySQL, PostgreSQL: Xử lý cơ bản</li>
                     <li>Linux, Webserver: Hiểu biết cơ bản</li>
                     <li>Git, Jira, Bitbucket: Sử dụng tốt</li>
                     <li>Kĩ năng AI: Copilot, Claude, ChatGPT (sử dụng AI để code, review code, kết hợp MCP để code theo design figma)</li>
-                    <li>Đã từng làm với các ngôn ngữ, công nghệ khác: Socket, SDK twilio - video call, service worker, Node.js, C#, Java (JSP/Servlet), jQuery, AWS S3/Lambda/Cloudfront</li>
+                    <li>Đã từng làm với các ngôn ngữ, công nghệ khác: Socket, SDK twilio - video call, service worker, NodeJS (Express, Drizzle), C#, Java (JSP/Servlet), jQuery, AWS S3/Lambda/Cloudfront</li>
                 </ul>
             </div>
             
