feat: update role

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <main class="main-content">
             <header>
                 <h1>Nguyễn Đức Phương</h1>
-                <h2>Senior Frontend & Teamlead</h2>
+                <h2>Senior Frontend</h2>
                 <p class="summary">
                     Senior Frontend với hơn 7 năm kinh nghiệm, trong đó có 2 năm giữ vị trí Teamlead. 
                     Đã hoàn thành thành công hơn 10 dự án với chuyên môn về Angular, React và Vue. 
