feat: update addition info

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <section class="additional-info">
                 <h2><i class="fas fa-plus-circle"></i> Thông tin bổ sung</h2>
                 <ul>
-                    <li>Chịu khó học hỏi và không ngừng cải thiện</li>
+                    <li>Chịu khó học hỏi và không ngừng cải thiện, sẵn sàng tìm hiểu công nghệ mới nếu dự án yêu cầu</li>
                     <li>Có trách nhiệm trong công việc</li>
                     <li>Có thể làm việc dưới áp lực</li>
                     <li>Giao tiếp, teamwork tốt</li>
